# erin-synth

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
Source/: ParameterIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: Distortion.cpp  Distortion.h  LevelMeter.cpp  LevelMeter.h  WaveformBuffer.h
Source/GUI/: ADSRSection.cpp  ADSRSection.h  DistortionSection.cpp  DistortionSection.h  ErinSynthLookAndFeel.cpp  ErinSynthLookAndFeel.h  FilterEnvSection.cpp  FilterEnvSection.h  FilterSection.cpp  FilterSection.h  GainSection.cpp  GainSection.h  LFOSection.cpp  LFOSection.h  OscillatorSection.cpp  OscillatorSection.h  VUMeterComponent.cpp  VUMeterComponent.h  WaveformVisualizer.cpp  WaveformVisualizer.h
Source/Synth/: ErinSynthSound.h  ErinSynthVoice.cpp  ErinSynthVoice.h
